templates/gke-kuberay-kueue-multitenant/config-connector-workload/01-namespaces.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  labels:
    project: gcp-template-forge
    template: gke-kuberay-kueue-multitenant
  name: team-a
---
apiVersion: v1
metadata:
  name: team-a-limits
  namespace: team-a
  labels:
    project: gcp-template-forge
    template: gke-kuberay-kueue-multitenant
spec:
  limits:
  - default:
      cpu: 500m
      memory: 1Gi
    defaultRequest:
      cpu: 100m
      memory: 512Mi
    type: Container
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    project: gcp-template-forge
    template: gke-kuberay-kueue-multitenant
  name: team-b
---
apiVersion: v1
metadata:
  name: team-b-limits
  namespace: team-b
  labels:
    project: gcp-template-forge
    template: gke-kuberay-kueue-multitenant
spec:
  limits:
  - default:
      cpu: 500m
      memory: 1Gi
    defaultRequest:
      cpu: 100m
      memory: 512Mi
    type: Container
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
    project: gcp-template-forge
    template: gke-kuberay-kueue-multitenant
  name: kueue-system
