templates/gke-kuberay-kueue-multitenant/config-connector-workload/queues.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
