templates/gke-kuberay-kueue-multitenant/config-connector-workload/01-kuberay-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kuberay
    project: gcp-template-forge
    template: gke-kuberay-kueue-multitenant
  name: kuberay-operator
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kuberay
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kuberay
        project: gcp-template-forge
        template: gke-kuberay-kueue-multitenant
    spec:
      containers:
      - args:
        - --leader-elect
        image: quay.io/kuberay/operator:v1.1.1
        name: kuberay-operator
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 512Mi
      serviceAccountName: kuberay-operator
